# calcos

./: .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  Jenkinsfile  JenkinsfileRT  README.md  README.patch  calcos3.0.release_notes  calcos3.1.release_notes.txt  defsetup.py  new_setup.cfg  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini  version.py
.github/: CODEOWNERS
.github/workflows/: build.yml  publish-to-pypi.yml  python_testing.yml
calcos/: __init__.py  accum.py  airglow.py  average.py  burst.py  calcos  calcos.help  calcos.py  calcosparam.py  concurrent.py  cosutil.py  dispersion.py  extract.py  findshift1.py  fpavg.py  getinfo.py  orbit.py  osmstep.py  phot.py  shiftfile.py  splittag.py  spwcs.py  timeline.py  timetag.py  trace.py  wavecal.py  x1d.py  xd_search.py
calcos/pars/: calcos.cfg  calcos.cfgspc
doc/: Makefile  make.bat
doc/source/: conf.py
docs/: rtd_environment.yaml
docs/source/: calcos.rst  conf.py  index.rst
lib/: __init__.py  accum.py  average.py  burst.py  calcos  calcos.py  calcosparam.py  concurrent.py  cosutil.py  dispersion.py  extract.py  findshift1.py  fpavg.py  getinfo.py  osmstep.py  phot.py  shiftfile.py  splittag.py  spwcs.py  timeline.py  timetag.py  wavecal.py  x1d.py  xd_search.py
lib/calcos/: __init__.py  accum.py  airglow.py  average.py  burst.py  calcos  calcos.help  calcos.py  calcosparam.py  concurrent.py  cosutil.py  dispersion.py  extract.py  findshift1.py  fpavg.py  getinfo.py  orbit.py  phot.py  shiftfile.py  splittag.py  spwcs.py  timeline.py  timetag.py  trace.py  wavecal.py  x1d.py  xd_search.py
src/: ccos.c
tests/: README.md  conftest.py  generate_tempfiles.py  helpers.py  test_acq_image.py  test_acq_peakd_both.py  test_acq_peakd_fuva.py  test_acq_peakd_nuv.py  test_acq_peakxd.py  test_acq_search.py  test_airglow.py  test_average.py  test_column_existence.py  test_cosutil.py  test_dark_fuva.py  test_dark_fuvb.py  test_dark_nuv.py  test_dispersion.py  test_extract.py  test_flat_fuva.py  test_flat_nuv.py  test_flat_relmvreq.py  test_fuv_timetag.py  test_getinfo.py  test_gettable.py  test_nuv_sci_g185m.py  test_nuv_sci_g230l.py  test_nuv_sci_g285m.py  test_phot.py  test_shiftfile.py  test_wavecal_fuva_f140l.py  test_wavecal_fuva_g130m.py  test_wavecal_fuvb_g160m.py  test_wavecal_fuvb_g160m_relmvreq.py  test_wavecal_nuv_g185m.py  test_wavecal_nuv_g225m.py  test_wavecal_nuv_g230l.py  test_wavecal_nuv_g285m.py  test_wavecal_nuv_mirrora.py  test_wavecal_nuv_mirrorb.py
tests/data/: test_tds.fits
