[project]
name = "calcos"
description = "Calibration software for COS (Cosmic Origins Spectrograph)"
requires-python = ">=3.10"
authors = [
  { name = "Phil Hodge" },
  { name = "Robert Jedrzejewski" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["astropy>=5.0.4", "numpy", "scipy"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
calcos = "calcos:main"

[project.optional-dependencies]
docs = ["sphinx<7"]
test = ["ci-watson", "pytest>=9.0", "pytest-cov"]

[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=3.4",
  "wheel",
  "numpy>=2.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
calcos = ["pars/*", "*.help"]

[tool.setuptools_scm]
version_file = "calcos/version.py"

[tool.pytest]
minversion = "9.0"
norecursedirs = ["build", "doc/build", "src"]
junit_family = "xunit2"

[tool.ruff.lint]
exclude = ["setup.py", "__init__.py"]
ignore = ["E265", "F821", "F841"]
