[metadata]
name = calcos
version = 3.1.2
vdate = 2016-02-24
author = Phil Hodge and Robert Jedrzejewski
author-email = help@stsci.edu
summary = Calibration software for COS (Cosmic Origins Spectrograph)
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
classifier =
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.6
requires-dist =
	numpy (>=1.5.1)
	astropy (>=0.3.1)
        scipy (>=0.14)

[files]
packages_root = lib
packages = calcos
package_data =
	calcos = pars/* *.help
scripts = lib/calcos/calcos

[extension=calcos.ccos]
sources = src/ccos.c
define_macros =
	NUMPY = 1
include_dirs = numpy

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[global]
setup_hooks =
	stsci.distutils.hooks.use_packages_root
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook

